--- a/inv_api_sample/inv_api_sample.csproj
+++ b/inv_api_sample/inv_api_sample.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper.FluentColumnMapping" Version="1.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
