--- a/inv_api_sample/appsettings.Development.json
+++ b/inv_api_sample/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server= 192.168.0.189;Port=3306;Database=inventory;User Id=charles;Password=K@Lender321;"
   }
 }
